syntax = "proto3";
import "google/protobuf/timestamp.proto";
service CustomerService {
    rpc GetAll (TodoRequestWithOwnerId) returns (TodoList) {}
    rpc Insert (Todo) returns (Todo) {}
    rpc Update (Todo) returns (Todo) {}
    rpc Remove (TodoRequestId) returns (Empty) {}
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Register(RegisterRequest) returns (RegisterResponse);
}

message Empty {}

message Todo {
    string id = 1;
    string name = 2;
    bool isAktive =3;
    string title = 4;
    string ownerID=5;
}


message TodoList {
    repeated Todo todo = 1;
}

message TodoRequestId{
  int32 id =1;
}

message TodoRequestWithOwnerId {
    string owner_id = 1;
}
message LoginRequest {
    string email = 1;
    string password = 2;
  }
  
  message LoginResponse {
    string token = 1;
  }
  
  message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
    string tcKimlik = 4;
    string name = 5;
    string surname = 6;
    int64 year = 7;
  }
  
  
  message RegisterResponse {
    string message = 1;
  }